implementacion de partes funcionais en funcionariado e proletariado.

--- a/src/app/funcionariado/funcionariado.component.html
+++ b/src/app/funcionariado/funcionariado.component.html
@@ -1,1 +1,15 @@
 <h1>Zona de Administración:</h1>
+<div class="card text-center" *ngFor="let parte of arrayPartes">
+    <div class="card-header">
+        <h3>{{parte.usuario}}</h3>
+    </div>
+    <div class="card-body">
+        <a>{{parte.xardin.nome}}</a>
+        <app-minimapa [xardinLocal]="parte.xardin"></app-minimapa>
+        <a>{{parte.accions}}</a><br>
+        <a>{{parte.observacions}}</a>
+    </div>
+    <div class="card-footer text-muted">
+        <a>{{returnParteFinalizado(parte)}}</a>
+    </div>
+</div>
