--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div login-background>
-    <form *ngIf="!logeado">
+    <form>
         <div class="login-container">
             <mat-card >
                 <mat-card-header>
