--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -139,8 +139,7 @@
                 <h3>{{factura.parte.xardin.nome}}</h3>
             </div>
             <div class="card-body">
-                <a>{{factura.data.getDate()}}/{{factura.data.getMonth()}}
-                    /{{factura.data.getFullYear()}}</a><br>
+                <a>{{factura.data}}</a><br>
                 <a>{{factura.parte.accions}}</a><br>
             </div>
             <div class="card-footer text-muted">
