--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,41 +1,34 @@
-<ngb-carousel>
-    <ng-template ngbSlide>
+
+
+
+<ngb-carousel >
+    <ng-template ngbSlide *ngFor="let image of carrouselImages">
         <div class="picsum-img-wrapper">
-            <img src="../../assets/imaxe/xardin e poda.jpg" alt="Random first slide">
+            <img [src]="image" alt="Random first slide">
         </div>
-        <div class="carousel-caption">
-            <h1>Multixard</h1>
-            <h3>Solucións para xardinería</h3>
-        </div>
-    </ng-template>
-    <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-            <img src="../../assets/imaxe/xardín de temporada.jpg" 
-            alt="Random first slide">
-        </div>
-        <div class="carousel-caption">
-            <h1>Multixard</h1>
-            <h3>Solucións para xardinería</h3>
-        </div>
+      <div class="carousel-caption">
+          <h1>Multixard</h1>
+          <h3>Solucións para xardinería</h3>
+      </div>
     </ng-template>
 </ngb-carousel>
 <div class="contenedor">
     <div class="card left">
-        <img src="../../assets/imaxe/rega.jpg" width="100%" height="100%" 
+        <img src="../../assets/imaxe/rega.jpg" width="100%" height="100%"
         class="card-img-left" alt="...">
         <div class="card-body">
             <p class="card-text">Realízase mantemento tanto de xardíns como de fincas.</p>
         </div>
     </div>
     <div class="card center">
-        <img src="../../assets/imaxe/poda.jpg" width="100%" height="100%" 
+        <img src="../../assets/imaxe/poda.jpg" width="100%" height="100%"
         class="card-img-right" alt="...">
         <div class="card-body">
             <p class="card-text">Dispoñibilidade para podas.</p>
         </div>
     </div>
     <div class="card right">
-        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%" 
+        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%"
         class="card-img-right" alt="...">
         <div class="card-body">
             <p class="card-text">
